# hypotheses

./: .commitlintrc.mjs  .editorconfig  .gitignore  .markdownlint.jsonc  .markdownlintignore  .mdformat.toml  .pre-commit-config.yaml  .vale.ini  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  VISION.md  llms-full.txt  llms.txt  lychee.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  hypothesis-proposal.yml  spec-question.yml
.github/workflows/: action-pin-check.yml  adr-required.yml  agent-prompts.yml  agents-routing.yml  bandit.yml  ci.yml  citation-validate.yml  commitlint.yml  docs-impact.yml  foundation-review-reminder.yml  frontmatter.yml  glossary-links.yml  grounding.yml  hypothesis-status.yml  labeler.yml  link-check.yml  llms-txt.yml  load-for-index.yml  markdownlint.yml  mutation.yml  orphan-docs.yml  pip-audit.yml  pr-size.yml  pr-title.yml  prompt-injection.yml  release-please.yml  requirements.yml  scorecard.yml  spdx.yml  spec-consistency.yml  spec-validate.yml  stale.yml  staleness.yml  system-tests.yml  tdd-gate.yml  token-budget.yml  typos.yml  vale.yml  vulture.yml  zizmor.yml
.vale/: README.md  baseline.json  glossary-baseline.json  grounding-baseline.json
agents/: README.md
agents/examples/: README.md
agents/prompts/: implementer-system.md  miner-system.md  proposer-system.md  red-team-system.md  reviewer-system.md  validator-operator-system.md
docs/: CONTRIBUTING-DOCS.md  implementation-handoff.md  initial-discord-conversation.md
docs/adr/: 0001-phase-zero-foundation.md  0002-test-toolchain.md  0003-system-test-markers.md  0004-design-heuristics.md  0005-rigor-framework.md  0006-rigor-pass-foundations.md  0007-foundations-gap-fix.md  0008-rigor-pass-scoring.md  0009-external-review-plan.md  0010-economic-strategy.md  0011-d22-coverage-bound.md  0012-c7-measurement.md  0013-cold-start-contingency.md  0014-treasury-pre-dao.md  0015-economic-survival-scope.md  0016-viability-decision-protocol.md  0017-validator-unit-economics.md  0018-participation-equilibrium.md  0019-viability-verdict-not-viable-as-designed.md  0020-sponsor-gated-heavy-profiles.md  0021-oracle-only-verification.md  0022-community-bounty-pool.md  README.md  (+3 more)
experiments/H-0001/: README.md  model.yaml  pyproject.toml  run.py
experiments/H-0002/: README.md  model.yaml  pyproject.toml  run.py
experiments/H-0003/: README.md  model.yaml  pyproject.toml  run.py
experiments/H-0005/: README.md  model.yaml  pyproject.toml  run.py
hypotheses/: H-0001-connectivity-first-training.md  H-0002-oracle-verified-distillation.md  H-0003-sgd-matches-adam-on-mlp.md  H-0004-snip-vs-edge-decay.md  H-0005-l1-vs-edge-decay.md  H-0006-rigl-vs-edge-decay.md  HYPOTHESIS_TEMPLATE.md  INFORMAL_TEMPLATE.md
informal/: I-0001-curvature-and-curriculum-difficulty.md  I-0002-pruning-noise-as-regulariser.md
scripts/: _doc_lib.py  check_action_pins.sh  check_adr_required.py  check_agent_prompts.py  check_agents_routing.py  check_citation.py  check_frontmatter.py  check_glossary_links.py  check_grounding.py  check_hypothesis_status.py  check_mutation_score.py  check_orphan_docs.py  check_prompt_injection.py  check_requirements.py  check_schema_matches_doc.py  check_spdx_headers.py  check_spec_consistency.py  check_staleness.py  check_system_test_traceability.py  check_tdd_order.py  check_token_budget.py  check_vale_baseline.py  docs_doctor.py  docs_impact_comment.py  gen_llms_txt.py  gen_load_for_index.py  validate_hypotheses.py
(+129 files in other folders)
