# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: 2026 The hypotheses subnet contributors
#
# Phase-0 skeleton. Activates pytest/pyright CI gates and hosts
# the test scaffold; src/hypotheses/ is empty until Phase 1.
# Coverage fail_under ratchets to 85 per HM-REQ-0040 with code.

[project]
name = "hypotheses"
version = "0.0.0-dev"
description = "Permissionless scientific hypothesis market on Bittensor."
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "pytest-watcher>=0.4",
    "pyright>=1.1.380",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypotheses"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "system_local: black-box system test runnable on a developer laptop with no external services (default profile)",
    "system_chain: black-box system test that requires Bittensor testnet ($BITTENSOR_TESTNET=1); skipped by default",
]

[tool.coverage.run]
source = ["src/hypotheses"]
branch = true

[tool.coverage.report]
show_missing = true
# Phase 0: empty src package → 0 % coverage is the only achievable
# value. Phase 1 ratchets up to 85 per HM-REQ-0040.
fail_under = 0

[tool.pyright]
include = ["src", "tests"]
strict = ["src", "tests"]
pythonVersion = "3.12"

[tool.ruff]
target-version = "py312"
extend-exclude = []
